--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -1,6 +1,7 @@
 .form {
   &__group {
     margin-bottom: 1rem;
+    width: 100%;
   }
 
   &__label {
@@ -14,6 +15,8 @@
     width: 200px;
     display: inline-block;
     @include mobile-100;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
   }
 
   &__select {
