--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -31,6 +31,7 @@
 
 @mixin mobile-100 {
   @media (max-width: 768px) {
+    min-width: 100%;
     width: 100%;
   }
 }
